--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 <script type='text/javascript'>
 redirectToLogin = function() {
-	window.location.href = "https://www.ystallonne.com/Website/index.html";
+	window.location.href = "https://www.linkedin.com/in/ystallonne";
 }
 </script>	
 </head>
